namespace core.Common.Enums;

public enum ProductType
{
    Paint,
    Waterproofing,
    Grout,
    Putty
}