erDiagram
    USERS ||--o{ CONTENTS : authors
    USERS ||--o{ PRODUCT_REVIEWS : writes
    USERS ||--o{ PRODUCT_COMMENTS : writes
    USERS ||--o{ CONTENT_COMMENTS : writes
    ROLES ||--o{ USERS : has

    CATEGORIES ||--o{ CATEGORIES : "parent of"
    CATEGORIES ||--o{ CONTENT_CATEGORIES : has
    CATEGORIES ||--o{ PRODUCT_CATEGORIES : has

    TAGS ||--o{ CONTENT_TAGS : has
    TAGS ||--o{ PRODUCT_TAGS : has

    CONTENT_TYPES ||--o{ CONTENTS : "defines"
    CONTENT_TYPES ||--o{ CONTENT_FIELD_DEFINITIONS : "has"

    CONTENTS ||--o{ CONTENT_FIELD_VALUES : has
    CONTENTS ||--o{ CONTENT_CATEGORIES : "belongs to"
    CONTENTS ||--o{ CONTENT_TAGS : "has"
    CONTENTS ||--o{ CONTENT_COMMENTS : "has"

    PRODUCT_TYPES ||--o{ PRODUCT_FIELD_DEFINITIONS : "has"
    PRODUCTS ||--o{ PRODUCT_FIELD_VALUES : has
    PRODUCTS ||--o{ PRODUCT_CATEGORIES : "belongs to"
    PRODUCTS ||--o{ PRODUCT_TAGS : "has"
    PRODUCTS ||--o{ PRODUCT_COMMENTS : "has"
    PRODUCTS ||--o{ PRODUCT_REVIEWS : "has"
    PRODUCTS ||--o{ PRODUCT_IMAGES : "has"

    SETTINGS 

    CONTACTS 

    SUBSCRIBER